--- a/Sass/_variables.scss
+++ b/Sass/_variables.scss
@@ -3,3 +3,4 @@ $placeholdercolor: #9ad1ad;
 $formColor:rgba(2, 140, 50, 0.6);
 $formfont: 'Mulish', sans-serif;
 $myfont:'Inter', sans-serif;
+$width: 900px;
