--- a/Asset/modules/_reset.scss
+++ b/Asset/modules/_reset.scss
@@ -3,3 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+@media screen and(max-width:520px) {
+    .dn{
+        display: none;
+    }
+    
+}
