--- a/style.css
+++ b/style.css
@@ -5,6 +5,19 @@
           box-sizing: border-box;
 }
 
+@media screen and (max-width: 520px) {
+  .dn {
+    display: none;
+  }
+}
+
+header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
 .navbar {
   background-color: linear-gradient(0deg, #FFFFFF, #FFFFFF);
   -webkit-box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.16);
@@ -23,6 +36,12 @@
 
 .navbar .navbar-toggler {
   border: none !important;
+}
+
+.navbar .navbar-toggler:focus {
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .navbar .fa {
@@ -105,6 +124,67 @@
 .advice p {
   color: #00000066;
   text-align: center;
+}
+
+.advice .recycle {
+  display: block;
+}
+
+@media screen and (max-width: 780px) {
+  .advice .recycle img {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .advice .eco img {
+    display: none;
+  }
+}
+
+footer .newsletter .enter {
+  text-align: right;
+}
+
+footer .newsletter .enter form label {
+  text-align: center;
+}
+
+footer .newsletter .enter form input {
+  border-radius: 5px;
+  padding: 5px 12px 5px 12px;
+}
+
+footer .newsletter .enter form button {
+  border-radius: 5px;
+  outline: none;
+  padding: 5px 12px 5px 12px;
+}
+
+footer .ftext p {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: justify;
+  color: #FFFFFF;
+}
+
+footer ul {
+  text-align: justify;
+}
+
+footer hr {
+  color: #FFFFFF;
+}
+
+footer .Copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 15px;
 }
 
 .adviceText {
