designed card using bootstrap

--- a/Asset/modules/_color.scss
+++ b/Asset/modules/_color.scss
@@ -6,6 +6,8 @@ $ptext2 : #FFFFFF;
 $bg1 :#EEEEEE;
 $bg2 : #E5E5E5;
 $fa : #646765;
+$headercolor:white;
+
 
 $placeholder : rgba(0, 0, 0, 0.36);
 $accordion: rgba(154, 153, 153, 0.08);
