--- a/Asset/modules/_color.scss
+++ b/Asset/modules/_color.scss
@@ -7,6 +7,8 @@ $bg1 :#EEEEEE;
 $bg2 : #E5E5E5;
 $fa : #646765;
 $headercolor:white;
+$cardcolor: #08BD46B2;
+
 
 
 $placeholder : rgba(0, 0, 0, 0.36);
